--- a/SDL_SetWindowGammaRamp.mediawiki
+++ b/SDL_SetWindowGammaRamp.mediawiki
@@ -16,7 +16,7 @@ int SDL_SetWindowGammaRamp(SDL_Window*   window,
 == Function Parameters ==
 {|
 |'''window'''
-|the window to update
+|the window to change
 |-
 |'''red'''
 |a 256 element array of 16-bit quantities representing the translation table for the red channel, or NULL
