--- a/SDL_SetWindowBrightness.mediawiki
+++ b/SDL_SetWindowBrightness.mediawiki
@@ -14,7 +14,7 @@ int SDL_SetWindowBrightness(SDL_Window* window,
 == Function Parameters ==
 {|
 |'''window'''
-|the window to update
+|the window to change
 |-
 |'''brightness'''
 |the brightness (gamma) value to set where 0.0 is completely dark and 1.0 is normal brightness
