--- a/SGFunctions.mediawiki
+++ b/SGFunctions.mediawiki
@@ -154,7 +154,7 @@ Otherwise, the basic format is as follows:
 * The __first column__ contains all of the parameter names, without types or pointers, in bold.
 * The __second column__ contains a simple description of each parameter using some specific formatting conventions.
 : ''<<Color2(red,Important!)>>'' All descriptions begin with a ''lower case'' letter, end ''without'' a period, and are generally not complete sentences.
-* There are a few content-dependent conventions we have chosen for consistency across pages - see the table below for details. 
+* There are a few content-dependent conventions we have chosen for consistency across pages - see the tables below for details. 
 
 ''Markup'': Use [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Tables basic table markup] and enclose each parameter name in [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Text_Formatting bold] markup.
 
@@ -162,19 +162,21 @@ Otherwise, the basic format is as follows:
 
 {|
 |
-|<bgcolor="#EDEDED">''Content-dependent formatting''
+|<bgcolor="#EDEDED">''Content-dependent formatting: General''
 |-
 |<( |2 30%>''If'' __more than one statement__ must be included in the description
 |''Action'': Separate them with a semi-colon (;)
 |-
 |''Note'': This should be avoided whenever possible.  See the next ''If'' statement in this table for more information.
 |-
-|<( |3 30%>''If'' a __more detailed description__ is required to adequately explain a parameter
+|<( |4 30%>''If'' a __more detailed description__ is required to adequately explain a parameter
 |''Action 1'' : Appended the following, verbatim, to the end of the brief description<br/>```; see [[#Remarks|Remarks]] for details```
 |-
 |''Action 2'': Place the more detailed information in the [[#Remarks|Remarks]] section
 |-
 |''Action 3'': See the next ''If'' in this table
+|-
+|''Example'': [[SDL_CreateWindow]]()
 |-
 |<( |3 30%>''If'' the __Remarks section is large__
 |''Action 1'': Create an [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Anchors anchor] immediately before the additional comments you are adding to the Remarks section
@@ -231,6 +233,46 @@ Otherwise, the basic format is as follows:
 |-
 |''Note'': If the reference is to the parameter as a ''concept'' (ie: the window) rather than ''directly'' to the parameter itself (ie: window) do not make it bold.<br/>~-Please don't just make the word bold every time it occurs on the page.-~
 |}
+
+''Note'': There are no cases where the description of a frequently used parameter is the same for all functions that use it, but often the same description can be used for many functions using the same parameter to enhance consistency.  The following table provides a list of these commonly used descriptions.  
+: When choosing a description phrase for a parameter please check this list to see if any of these common descriptions is applicable.
+
+{|
+|
+|<bgcolor="#EDEDED">''Content-dependent formatting: Specific''
+|-
+|<( |4 30%>''If'' the parameter is __SDL_Window* window__
+|''Action 1'': Most often this description begins with <code>the window to</code> followed by what is being done (ie: minimize, maximize, show, etc).
+|-
+|''Action 2'': The most common versions are <code>the window to change</code> or <code>the window to query</code>.  Use as applicable.
+|-
+|''Note'': A text search for "SDL_Window* window" will provide you with plenty of examples.
+|-
+|''Example'': [[SDL_RestoreWindow]](), [[SDL_SetWindowTitle]](), [[SDL_GetWindowFlags]]()
+|}
+
+{|
+|<( |4 30%>''If'' the parameter is ____
+|''Action 1'': Most often this description begins with <code></code> followed by what is being done (ie: ).
+|-
+|''Action 2'': The most common versions are <code></code> or <code></code>.  Use as applicable.
+|-
+|''Note'': A text search for "" will provide you with plenty of examples.
+|-
+|''Example'': [[SDL_]](), [[SDL_]](), [[SDL_]]()
+|}
+
+{|
+|<( |4 30%>''If'' the parameter is ____
+|''Action 1'': Most often this description begins with <code></code> followed by what is being done (ie: ).
+|-
+|''Action 2'': The most common versions are <code></code> or <code></code>.  Use as applicable.
+|-
+|''Note'': A text search for "" will provide you with plenty of examples.
+|-
+|''Example'': [[SDL_]](), [[SDL_]](), [[SDL_]]()
+|}
+
 
 
 
