--- a/Contributing.mediawiki
+++ b/Contributing.mediawiki
@@ -24,7 +24,7 @@ To help you with this we have created a series of resources:
 
 <span id="form"></span>
 === Feedback Form ===
-: This is the quickest and simplest way to contribute!  Every page of the wiki contains a drop down ''Feedback'' form (upper right) where you can post quick content ideas, questions, suggestions, etc.  Simply click the form tab, fill in the text field with your contribution, and click ''Submit''.  We'll take it from there!
+: This is the quickest and simplest way for anyone to contribute!  There is no sign up and no permissions are required to use this option.  Every page of the wiki contains a drop down ''Feedback'' form (upper right) where you can post quick content ideas, questions, suggestions, etc.  Simply click the form tab, fill in the text field with your contribution, include your contact information if you would like a reply, and click ''Submit''.  We'll take it from there!
 
 <span id="list"></span>
 === Mailing List ===
@@ -36,13 +36,14 @@ To help you with this we have created a series of resources:
 === Style Guides by Topic ===
 : These are the core of our contribution resources.  There is a style guide for each type of contribution you may wish to make as well as the [http://wiki.libsdl.org/moin.cgi/SGWikiBasics Wiki Basics] guide which contains global information that all contributors should have.  
 
-: '''We recommend that you begin with Wiki Basics and then dive into the topic-specific guides that interest you before you begin to edit.'''  Please check back periodically for reminders and updates!
+: '''We recommend that you begin with __Wiki Basics__ and then dive into the topic-specific guides that interest you before you begin to edit.'''  Please check back periodically for reminders and updates!
 
  ||<bgcolor="#EDEDED">''Style Guide''||<bgcolor="#EDEDED">''Topics Covered''||
- ||[http://wiki.libsdl.org/moin.cgi/SGWikiBasics Wiki Basics]||Starting to edit<br/>Saving changes<br/>Quick reference for wiki markup used in this wiki<br/>Miscellaneous notes||
+ ||[http://wiki.libsdl.org/moin.cgi/SGWikiBasics Wiki Basics]||Starting to edit<br/>Saving changes<br/>Style Guide basics<br/>Quick reference for wiki markup used in this wiki<br/>Miscellaneous notes||
  ||[http://wiki.libsdl.org/moin.cgi/SGCodeExamples Code Examples]||Adding Code Examples to any [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#api API page]||
  ||[http://wiki.libsdl.org/moin.cgi/SGRemarks Remarks]||Adding Remarks to any [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#api API page]||
  ||[http://wiki.libsdl.org/moin.cgi/SGTutorials Tutorials]||Adding an existing tutorial to the Tutorials page<br/>Creating a new tutorial within the wiki||
+ ||''Coming Soon!''||Editing function pages<br/>~-This is supplemental to the Code Examples and Remarks Style Guides-~||
 
 : If you find something that is not addressed or is unclear in a style guide please post your questions using the feedback form, the mailing list, or email us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
 
