--- a/SGFunctions.mediawiki
+++ b/SGFunctions.mediawiki
@@ -236,66 +236,74 @@ Otherwise, the basic format is as follows:
 |''Note'': If the reference is to the parameter as a ''concept'' (ie: the window) rather than ''directly'' to the parameter itself (ie: window) do not make it bold.<br/>~-Please don't just make the word bold every time it occurs on the page.-~
 |}
 
-''Note'': There are no cases where the description of a frequently used parameter is the same for all functions that use it, but often the same description can be used for many functions using the same parameter to enhance consistency.  The following table provides a list of these commonly used descriptions.  
-: When choosing a description phrase for a parameter please check this list to see if any of these common descriptions is applicable.
+''Note'': It would only rarely be appropriate to use the exact same description of a common parameter every time that parameter appears in the API.  However, the same or very similar description can be used for many occurrences of the same parameter, enhancing consistency across pages.  The following table provides a list of these commonly used descriptions.
+
+''Action'': When choosing a description phrase for a parameter please check this list to see if any of these common descriptions is applicable, even if a minor modification is required.
 
 {|
 |
 |<bgcolor="#EDEDED">''Content-dependent formatting: Specific''
 |-
+|<( |4 30%>''If'' the parameter is __SDL_Palette* palette__
+|''Action 1'': Most often this description begins with <code>the [[SDL_Palette]] structure to</code>, followed by what to do with the palette.
+|-
+|''Action 2'': The most common version is <code>the [[SDL_Palette]] structure to use</code>.  Use as applicable.
+|-
+|''Example'': [[SDL_SetSurfacePalette]](), [[SDL_FreePalette]]()
+|-
+|''Note'': Of course other phrases to describe this parameter may become necessary.  A text search for "SDL_Palette* palette" should provide you with other descriptions if they arise.
+|-
 |<( |4 30%>''If'' the parameter is __SDL_Rect* rect(s)__
-|''Action 1 - rect'': Most often this description begins with <code>the/an</code> ```[[SDL_Rect]]``` <code>structure</code> <code>representing the rectangle to</code>, followed by the action (ie: fill, draw, intersect, etc).
+|''Action 1 - '''rect''''': Most often this description begins with <code>the/an</code> ```[[SDL_Rect]]``` <code>structure</code> <code>representing the rectangle to</code>, followed by what the rectangle is for (ie: fill, draw, intersect, etc).
 |-
-|''Action 2 - rects'': When the parameter is plural it refers to an array and will most often begin with <code>an array of</code> ```[[SDL_Rect]]``` <code>structures</code> <code>representing the rectangles to</code>, followed by the action
-|-
-|''Note'': A text search for "SDL_Rect* rect" should provide you with plenty of examples of both the singular and plural parameters.
+|''Action 2 - '''rects''''': When the parameter is plural it refers to an array and will most often begin with <code>an array of</code> ```[[SDL_Rect]]``` <code>structures</code> <code>representing the rectangles to</code>, followed by what the rectangle is for.
 |-
 |''Example'': [[SDL_FillRect]](), [[SDL_RenderDrawRect]](), [[SDL_IntersectRectAndLine]](), [[SDL_RenderDrawRects]]()
-|}
-
-{|
-|<( |4 30%>''If'' the parameter is __SDL_Surface* surface__
-|''Action 1'': Most often this description begins with <code>the [[SDL_Surface]] structure to</code>, followed by what is being done (ie: optimize, ).
 |-
-|''Action 2'': The most common versions are <code>the [[SDL_Surface]] structure to update</code> or <code></code>.  Use as applicable.
+|''Note'': Of course there are some other phrases to describe these parameters.  A text search for "SDL_Rect* rect" should provide you with plenty of other examples of both the singular and plural parameters.
 |-
-|''Note'': A text search for "" should provide you with plenty of examples.
+|<( |3 30%>''If'' the parameter is __SDL_Renderer* renderer__
+|''Action 1'': A rare exception, this description is __always__ <code>the rendering context</code> (at least so far).
 |-
-|''Example'': [[SDL_SetSurfaceRLE]](), [[SDL_]](), [[SDL_]]()
-|}
-
-{|
+|''<<Color2(red,Important!)>>'' Please use this description for ''all'' occurrences of this parameter unless/until it appears in the API in a different context that calls for another description.  A text search for "SDL_Renderer* renderer" should be used to determine if this has become the case.
+|-
+|''Example'': [[SDL_RenderPresent]](), [[SDL_RenderDrawLine]](), [[SDL_CreateTexture]]()
+|-
+|<( |5 30%>''If'' the parameter is __SDL_Surface* surface__
+|''Action 1'': Most often this description begins with <code>the [[SDL_Surface]] structure to</code>, followed by what is happening with the structure (ie: optimize, be locked, etc.).
+|-
+|''Action 2'': The most common versions are <code>the [[SDL_Surface]] structure to update</code> (often used with Set functions) or <code>the [[SDL_Surface]] structure to query</code> (often used with Get functions).  Use as applicable.
+|-
+|''Action 3'': Some will be best described by the following instead:  <code>the [[SDL_Surface]] structure representing</code> <something>.
+|-
+|''Example'': [[SDL_SetSurfaceRLE]](), [[SDL_LockSurface]](), [[SDL_GetClipRect]](), [[SDL_SaveBMP_RW]]()
+|-
+|''Note'': Of course there are some other phrases to describe this parameter.  A text search for "SDL_Surface* surface" should provide you with plenty of other examples.
+|-
 |<( |4 30%>''If'' the parameter is __SDL_Texture* texture__
 |''Action 1'': Most often this description begins with <code>the texture to</code>, followed by what is being done (see ''Action 2'').
 |-
-|''Action 2'': The most common versions are <code>the texture to update</code> or <code>the texture to query</code>.  Use as applicable.
-|-
-|''Note'': A text search for "SDL_Texture* texture" should provide you with plenty of examples.
+|''Action 2'': The most common versions are <code>the texture to update</code> (often used with Set functions) or <code>the texture to query</code> (often used with Get functions).  Use as applicable.
 |-
 |''Example'': [[SDL_SetTextureAlphaMod]](), [[SDL_QueryTexturePixels]](), [[SDL_UnlockTexture]]()
+|-
+|''Note'': Of course there are some other phrases to describe this parameter.  A text search for "SDL_Texture* texture" should provide you with plenty of other examples.
 |-
 |<( |4 30%>''If'' the parameter is __SDL_Window* window__
 |''Action 1'': Most often this description begins with <code>the window to</code>, followed by what is being done (ie: minimize, maximize, show, etc).
 |-
-|''Action 2'': The most common versions are <code>the window to change</code> (often with Set functions) or <code>the window to query</code> (often with Get functions).  Use as applicable.
-|-
-|''Note'': A text search for "SDL_Window* window" should provide you with plenty of examples.
+|''Action 2'': The most common versions are <code>the window to change</code> (often used with Set functions) or <code>the window to query</code> (often used with Get functions).  Use as applicable.
 |-
 |''Example'': [[SDL_RestoreWindow]](), [[SDL_SetWindowTitle]](), [[SDL_GetWindowFlags]]()
+|-
+|''Note'': Of course there are some other phrases to describe this parameter.  A text search for "SDL_Window* window" should provide you with plenty of examples.
 |}
 
-{|
-|<( |4 30%>''If'' the parameter is ____
-|''Action 1'': Most often this description begins with <code></code>, followed by what is being done (ie: ).
-|-
-|''Action 2'': The most common versions are <code></code> or <code></code>.  Use as applicable.
-|-
-|''Note'': A text search for "" should provide you with plenty of examples.
-|-
-|''Example'': [[SDL_]](), [[SDL_]](), [[SDL_]]()
-|}
-
-
+<!-- #Standardized table block for specific table: -->
+<!-- #||<( |4 30%>''If'' the parameter is ____||''Action 1'': Most often this description begins with <code></code>, followed by what is being done (ie: ).|| -->
+<!-- #||''Action 2'': The most common versions are <code></code> or <code></code>.  Use as applicable.|| -->
+<!-- #||''Example'': [[SDL_]](), [[SDL_]](), [[SDL_]]()|| -->
+<!-- #||''Note'': Of course there are some other phrases to describe this parameter.  A text search for "" should provide you with plenty of examples.|| -->
 
 
 
