--- a/SDL_LowerBlitScaled.mediawiki
+++ b/SDL_LowerBlitScaled.mediawiki
@@ -31,7 +31,7 @@ int SDL_LowerBlitScaled(SDL_Surface* src,
 
 
 == Return Value ==
-Returns 0 on success, or a negative error code on failure; call [[SDL_GetError]]() for more information. ???
+Returns 0 on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
