--- a/SDL_ThreadPriority.mediawiki
+++ b/SDL_ThreadPriority.mediawiki
@@ -7,6 +7,7 @@ An enumeration of the SDL thread priority.
 
 
 == Values ==
+<!-- #The following content is included on <code>SDL_SetThreadPriority</code>.  Any changes between these comments will be reflected there as well.  Please use caution when editing.  Start Include here. -->
 {|
 |SDL_THREAD_PRIORITY_LOW
 |description
@@ -17,6 +18,7 @@ An enumeration of the SDL thread priority.
 |SDL_THREAD_PRIORITY_HIGH
 |description
 |}
+<!-- #End Include here. -->
 
 == Code Examples ==
 ```c++
